# machineplay

./: .envrc  .gitignore  .pre-commit-config.yaml  Justfile  README.md  TODO.md  main.py  pyproject.toml
backend/: app.py  config.py  db.py  enums.py  exceptions.py  game.py  models.py  pyproject.toml  routes.py  schemas.py  streaming.py
backend/app/: db.py  exceptions.py  main.py  routes.py  streaming.py
backend/scripts/: export_openapi.py  seed_stockfish.py
backend/tests/: conftest.py  test_engines.py  test_persist_event.py
frontend/: .env.production  Justfile  index.html  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Chessground.tsx  Layout.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/pages/: GamePage.tsx  Home.tsx  NotFound.tsx  Stub.tsx
machineplay/: pyproject.toml
machineplay/machineplay/: __main__.py  schemas.py
