[project]
name = "machineplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "beanie>=2.1.0",
    "chess>=1.11.2",
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.mypy]
python_version = "3.13"
files = ["."]
ignore_missing_imports = true
