[project]
name = "machineplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "beanie>=2.1.0",
    "chess>=1.11.2",
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "testcontainers[mongodb]>=4.14.2",
]

[tool.mypy]
python_version = "3.13"
files = ["."]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
