[project]
name = "machineplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "certifi>=2026.4.22",
    "chess>=1.11.2",
    "pydantic>=2.13.4",
    "websockets>=16.0",
]

[project.scripts]
machineplay = "machineplay.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machineplay"]
